--- a/build.gradle
+++ b/build.gradle
@@ -101,8 +101,8 @@ publishing {
 			name = "GitHubPackages"
 			url = uri("https://maven.pkg.github.com/iammohdzaki/Glance-Mod")
 			credentials {
-				username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-				password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+				username = project.findProperty("gpr.user") ?: System.getenv("GH_USERNAME")
+				password = project.findProperty("gpr.key") ?: System.getenv("GH_PUBLISH_TOKEN")
 			}
 		}
 	}
